--- a/prova1004/index.css
+++ b/prova1004/index.css
@@ -1,27 +1,106 @@
-header {
-    
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.menu {
+    border-bottom: 3px solid rgb(245, 92, 123);
+    background-color: rgb(245, 92, 123);
+    height: 50px;
+}
+
+ul li {
     display: inline-block;
+    text-align: center;
+    color: white;
+    font-size: large;
+    padding: 3px;
+}
 
+nav {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
+nav li:not(:last-child)::after {
+    content: "|";
+    padding-left: 5px;
+}
+
+header {
+    display: flex;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    background-image: url(https://www.viajanet.com.br/blog/wp-content/uploads/2019/10/Bonito-MS.jpg);
+    background-size: cover;
+    height: 200px;
+}
+
+
+.principal {
+    display: flex;
+    margin-top: 20px;
+    justify-content: space-evenly;
+}
+
+.texto {
+    width: 50%;
+}
+
+div h1 {
+    color: rgb(245, 92, 123);
+
+}
+
+div p {
+    font-size: medium;
     
 }
-body{
-    display: flexbox;
-}
-h1{
- display: ;
+
+.colunas {
+    display: flex;
+    width: 40%;
+    justify-content: space-evenly;
 }
 
-p{
+.coluna1 {
+    margin-left: 30px;
+}
 
- text-align: left;
+.coluna2 {
+    margin-right: 30px;
 }
 
 img {
- float: right;
- width: auto;
- height: auto;
+    width: 200px;
+    height: 100%;
 }
 
-footer{
+.cards{
+    border: 1px solid rgb(245, 92, 123);
+    margin-bottom: 12px;
+}
 
+.linha {
+    display: flex;
+    height: 30px;
+    margin-top: 0px;
+    align-items: center;
+    justify-content: center;
+    font-size: small;
+    background-color: rgb(245, 92, 123);
+    color: white;
+}
+
+.rodape {
+    display: flex;
+    height: 40px;
+    margin: auto;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(245, 92, 123);
 }
